faq icon alignment resolved

--- a/css/style.css
+++ b/css/style.css
@@ -3143,7 +3143,6 @@ h4, .h4 {
     right: 1rem;
     font-size: 1rem;
     color: #7288a2;
-    padding: 5px;
     width: 30px;
     height: 30px;
     -webkit-border-radius: 50%;
